--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -225,7 +225,7 @@
                         }
                         else if (u[0].role.ToLower() == "admin")
                         {
-                            Nav.NavigateTo("/products");
+                            Nav.NavigateTo("/dashboard");
                         }
                         else
                         {
