--- a/Components/Pages/Dashboard.razor
+++ b/Components/Pages/Dashboard.razor
@@ -2,61 +2,48 @@
 
 <PageTitle>Dashboard</PageTitle>
 
-<style>
-    .page_404 {
-        padding: 40px 0;
-        background: #fff;
-        font-family: 'Arvo', serif;
-    }
+<div class="row">
+    <div class="col-12 col-md-6">
 
-        .page_404 img {
-            width: 100%;
-        }
+        <MudCard Class="dashboard-card" Style="background-color:#30BFC1">
+            <MudCardContent>
+                <MudText Class="dashboard-title" Size="5">
+                    Total purchase for today
+                </MudText>
+                <MudCardContent>
+                    <MudText Class="dashboard-count">₱11</MudText>
+                </MudCardContent>
+            </MudCardContent>
+        </MudCard>
+    </div>
 
-    .four_zero_four_bg {
-        background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
-        height: 400px;
-        background-position: center;
-    }
+    <div class="col-12 col-md-6">
+        <MudCard Class="dashboard-card" Style="background-color:#FEAD46">
+            <MudCardContent>
+                <MudText Class="dashboard-title" Size="5">
+                    Total purchase for this month
+                </MudText>
+                <MudCardContent>
+                    <MudText Class="dashboard-count">₱ 22</MudText>
+                </MudCardContent>
+            </MudCardContent>
+        </MudCard>
+    </div>
+</div>
+<br />
 
+<div>
+    <MudChart ChartType="ChartType.Line" ChartSeries="@Series" @bind-SelectedIndex="Index" XAxisLabels="@XAxisLabels" Width="100%" Height="600px" ChartOptions="@Options" />
+</div>
+@code {
+    private int Index = -1; //default value cannot be 0 -> first selectedindex is 0.
+    public ChartOptions Options = new ChartOptions();
 
-        .four_zero_four_bg h1 {
-            font-size: 80px;
-        }
+    public List<ChartSeries> Series = new List<ChartSeries>()
+    {
+        new ChartSeries() { Name = "Fossil", Data = new double[] { 90, 79, 72, 69, 62, 62, 55, 65, 70 } },
+        new ChartSeries() { Name = "Renewable", Data = new double[] { 10, 41, 35, 51, 49, 62, 69, 91, 148 } },
+    };
+    public string[] XAxisLabels = { "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep" };
 
-        .four_zero_four_bg h3 {
-            font-size: 80px;
-        }
-
-    .link_404 {
-        color: #fff !important;
-        padding: 10px 20px;
-        background: #39ac31;
-        margin: 20px 0;
-        display: inline-block;
-    }
-
-    .contant_box_404 {
-        margin-top: -50px;
-    }
-</style>
-<center>
-    <section class="page_404">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 ">
-                    <div class="col-sm-10 col-sm-offset-1  text-center">
-                        <div class="four_zero_four_bg">
-                            <h1 class="text-center " style="font-size:50px;">Under Construction.......</h1>
-                        </div>
-                        <div class="contant_box_404">
-                            <h3 class="h2">
-                                Coming soon.......
-                            </h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-</center>
+}
