--- a/Components/Pages/Counter.razor
+++ b/Components/Pages/Counter.razor
@@ -474,6 +474,7 @@ else
         await GetTemp();
         await GetTotal();
         _visible = false;
+        _processing = false;
         StateHasChanged();
     }
 
