--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -223,7 +223,7 @@
                         {
                             Nav.NavigateTo("/counter");
                         }
-                        else if (u[0].role.ToLower() == "admin")
+                        else if (u[0].role.ToLower() == "administrator")
                         {
                             Nav.NavigateTo("/dashboard");
                         }
