--- a/Components/Pages/UpdateProduct.razor
+++ b/Components/Pages/UpdateProduct.razor
@@ -160,6 +160,7 @@
 
                             SnackBar.Add($"Done: Successfully Updated!", Severity.Success);
                             MudDialog.Cancel();
+                            StateHasChanged();
                         }
                     }
                 else
@@ -167,6 +168,7 @@
                         await InvokeAsync(() =>
                         {
                             SnackBar.Add($"Warning: {response.ReasonPhrase}", Severity.Warning);
+                            StateHasChanged();
                         });
                     }
                 }
@@ -174,6 +176,7 @@
             catch (Exception ex)
             {
                 SnackBar.Add($"Error: {ex.Message}", Severity.Error);
+                StateHasChanged();
             }
         }
     }
